# kaggle-actions

./: .gitignore
common_lit/: Readme.md  pyproject.toml
common_lit/commonlit/: notebook5afd8a1160.ipynb
health_horses/: Readme.md  pyproject.toml
health_horses/.devcontainer/: Dockerfile
health_horses/health/: Readme.md  pyproject.toml
health_horses/health/run/: run.ipynb
improve_fixed_model/: pyproject.toml
rwanda_co2_predictions/: .pre-commit-config.yaml  Readme.md  pyproject.toml
rwanda_co2_predictions/.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
rwanda_co2_predictions/.devenvironment/: install_dev_no_docker.sh
rwanda_co2_predictions/rwanda/explore/: cluster_lat_lon.ipynb  correlation_with_emission.ipynb  dimension_reduction.ipynb  general_explorations.ipynb  test_set.ipynb  time_series.ipynb
rwanda_co2_predictions/rwanda/run/: run_simple_approach.ipynb  run_tabular.ipynb  (+1 more)
spaceship_titanic/: .pre-commit-config.yaml  Readme.md  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
spaceship_titanic/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
spaceship_titanic/.devenvironment/: install_dev_docker.sh  install_dev_no_docker.sh
spaceship_titanic/spaceship/: notebook_X_inspection.ipynb  notebook_Y_inspection.ipynb  notebook_inspection.ipynb  notebook_run.ipynb
spaceship_titanic/spaceship/helpers/: helpers.py
spaceship_titanic/spaceship/models/: baseline_nn.py  baseline_regression.py  gb_classifier.py
spaceship_titanic/spaceship/pipeline/: encoders.py  imputers.py  pipeline.py  preproc.py
(+4 files in other folders)
