[tool.poetry]
name = "health_horses"
version = "0.0.1"
description = ""
authors = ["Mahosaurus"]
packages = [{include = "health"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
ipython = "^8.10.0"
xgboost = "^1.7.6"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
tqdm = "^4.65.1"
ipykernel = "^6.25.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
pre-commit = "^3.2.1"
pylint = "^2.17.5"
