[tool.poetry]
name = "spaceship"
version = "0.0.1"
description = ""
authors = ["Mahosaurus"]
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
ipython = "^8.10.0"
ipykernel = "^6.21.2"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

